--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /gradlew
 /gradlew.bat
 /gradle/
+/.idea/.gitignore
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
