add item loader for books

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ python {
     pip 'tinydb:4.4.0'
     pip 'scrapy-playwright:0.0.3'
     pip 'pyclean:2.0.0'
+    pip 'pytest:6.2.4'
 }
 
 def sitePackageDir = "$projectDir/.gradle/python/lib/python3.9/site-packages"
